# rust-doom

./: .gitignore  Cargo.toml  main.rs  map.rs  wad.rs
assets/: doom.ini
prebuild/: build.rs  textures.rs
src/: actors.rs  bsp.rs  camera.rs  collision.rs  configure.rs  data_textures.rs  doom.rs  intersection.rs  main.rs  map.rs  math.rs  render.rs  shape.rs  time.rs  types.rs  wad.rs  window.rs
