# Enable rustflags
cargo-features = ["profile-rustflags"]

[package]
name = "rust-doom"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
build = "prebuild/build.rs"

[build-dependencies]
lazy_static = "1.5.0"

[dependencies]
lazy_static = "1.5.0"
num-traits = "0.2.19"
pixels = "0.13.0"
raw-window-handle = "0.5.2" #Pixes does not support 0.6 
winit = { version = "0.29.15", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
winit_input_helper = "0.15.3"
readonly = "0.2.12"
rust-ini = "0.21.1"
bytemuck = "1.21.0"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = "fat"
debug = false
strip = true
overflow-checks = false
debug-assertions = false
rustflags = [
  "-Ctarget-cpu=native",
  "-Ctarget-feature=+sse2,+sse3,+sse4.1,+sse4.2,+avx,+avx2,+fma"
]